--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ div {
 }
 
 body {
-  background: url('/bg.jpg') no-repeat center center/cover;
+  background: url('img/bg.jpg') no-repeat center center/cover;
   height: 100%;
   position: relative;
   color: #fff;
